--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -20,12 +21,27 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id="nav"></div>
+        <div id="app"></div>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <script type="text/template" id="login-template">
+        <div id="login-container">
+            <form class="form-signin" role="form" action="user/login" method="post" id="form-login">
+            <h2 class="form-signin-heading">Tutorias</h2>
+            <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+            <input type="password" name="password" class="form-control" placeholder="Password" required>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+
+          <div id="loginMsg" class="bg-danger"></div>
+          </form>
+        </div>
+        </script>
+
+        <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/bootstrap.js"></script>
+        <script src="js/vendor/underscore.js"></script>
+        <script src="js/vendor/backbone.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
