--- a/index.html
+++ b/index.html
@@ -60,9 +60,30 @@
         </div>
         </script>
         <script type="text/template" id="dashboard-template">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6"><h4>Alumnos</h4></div>
-                <div class="col-md-6">Grupos</div>
+                <div class="col-xs-6 dashboard">
+                    <div class="dash-content">
+                        <h4>Alumnos</h4>
+                        <table id="table-alumnos" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Metrícula</th>
+                                    <th>Nombre</th>
+                                    <th>Opciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-xs-6 dashboard">
+                    <div class="dash-content">
+                        <h4>Grupos</h4>
+                    </div>
+                </div>
+            </div>
             </div>
         </script>
 
