--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
             <div class="row">
                 <div class="col-xs-6 dashboard">
                     <div class="dash-content">
-                        <h4>Alumnos</h4>
+                        <h4>
+                            Alumnos en Proceso 
+                            <a href="#">
+                                <span class="glyphicon glyphicon-cloud-download"></span>
+                            </a>
+                        </h4>
                         <table id="table-alumnos" class="table table-striped table-hover">
                             <thead>
                                 <tr>
@@ -80,11 +85,35 @@
                 </div>
                 <div class="col-xs-6 dashboard">
                     <div class="dash-content">
-                        <h4>Grupos</h4>
+                        <h4>Grupos en Proceso
+                        <a href="#">
+                                <span class="glyphicon glyphicon-cloud-download"></span>
+                            </a></h4>
+                            <table id="table-grupos" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Grupo</th>
+                                    <th>Opciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
             </div>
+        </script>
+        <script type="text/template" id="alumno-activo-template">
+            <td><%- matricula %></td>
+            <td><%- nombre %></td>
+            <td><%- matricula %></td>
+        </script>
+        <script type="text/template" id="grupo-activo-template">
+            <td><%- idgrupo %></td>
+            <td><%- grupo %></td>
+            <td><%- idgrupo %></td>
         </script>
 
         <script src="js/vendor/jquery.min.js"></script>
