--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
             <td><%- grupo %></td>
             <td><%- idgrupo %></td>
         </script>
+        <script type="text/template" id="alumnos-template">
+            <table id="table-alumnos" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Grupo</th>
+                                    <th>Opciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+        </script>
 
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.js"></script>
