--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="nav"></div>
-        <div id="app"></div>
+        <div id="container" style="background-color: #fff">        
+            <div id="app"></div>
+        </div>
+
 
         <script type="text/template" id="login-template">
-        <div id="login-container">
+            <div id="login-container">
             <form class="form-signin" role="form" action="user/login" method="post" id="form-login">
             <h2 class="form-signin-heading text-primary">Tutorias</h2>
             <input type="email" name="email" class="form-control" placeholder="Correo Electrónico" required autofocus>
@@ -33,76 +36,76 @@
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar Sesión</button>
 
-          <div id="loginMsg" class="bg-danger"></div>
-          </form>
-        </div>
+            <div id="loginMsg" class="bg-danger"></div>
+            </form>
+            </div>
         </script>
 
         <script type="text/template" id="nav-bar">
-        <div id="navbar" class="navbar navbar-default navbar-static-top" role="navigation">
-          <div class="container">
+            <div id="navbar" class="navbar navbar-default navbar-static-top" role="navigation">
+            <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#/">Tutorias</a>
+            <a class="navbar-brand" href="#/">Tutorias</a>
             </div>
             <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav">
             <% _.each(menus,function(item){ %>
-                <li class="<%- item.menu %>">
-                    <a href="#/<%- item.menu %>"><%- item.menu %></a>
-                </li>
-                <% }); %>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="user/logout" class="logout">Salir</a></li>
-              </ul>
+            <li class="<%- item.menu %>">
+            <a href="#/<%- item.menu %>"><%- item.menu %></a>
+            </li>
+            <% }); %>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            <li><a href="user/logout" class="logout">Salir</a></li>
+            </ul>
             </div>
-          </div>
-        </div>
+            </div>
+            </div>
         </script>
         <script type="text/template" id="dashboard-template">
-        <div class="container">
-        
+            <div class="container">
+
             <div class="row">
-                <div class="col-xs-6 dashboard">
-                    <div class="dash-content">
-                        <h4>
-                            Alumnos en Proceso 
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cloud-download"></span>
-                            </a>
-                        </h4>
-                        <table id="table-alumnos" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Metrícula</th>
-                                    <th>Nombre</th>
-                                    <th>Opciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="col-xs-6 dashboard">
-                    <div class="dash-content">
-                        <h4>Grupos en Proceso
-                        <a href="#">
-                                <span class="glyphicon glyphicon-cloud-download"></span>
-                            </a></h4>
-                            <table id="table-grupos" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Grupo</th>
-                                    <th>Opciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+            <div class="col-xs-6 dashboard">
+            <div class="dash-content">
+            <h4>
+            Alumnos en Proceso 
+            <a href="#">
+            <span class="glyphicon glyphicon-cloud-download"></span>
+            </a>
+            </h4>
+            <table id="table-alumnos" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>Metrícula</th>
+            <th>Nombre</th>
+            <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+            </div>
+            </div>
+            <div class="col-xs-6 dashboard">
+            <div class="dash-content">
+            <h4>Grupos en Proceso
+            <a href="#">
+            <span class="glyphicon glyphicon-cloud-download"></span>
+            </a></h4>
+            <table id="table-grupos" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>#</th>
+            <th>Grupo</th>
+            <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+            </div>
+            </div>
             </div>
             </div>
         </script>
@@ -118,16 +121,30 @@
         </script>
         <script type="text/template" id="alumnos-template">
             <table id="table-alumnos" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Grupo</th>
-                                    <th>Opciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+            <thead>
+            <tr>
+            <th>Matrícula</th>
+            <th>Alumno</th>
+            <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+        </script>
+
+        <script type="text/template" id="grupos-template">
+            <table id="table-grupos" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>#</th>
+            <th>Grupo</th>
+            <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
         </script>
 
         <script src="js/vendor/jquery.min.js"></script>
