Buscar alumno activo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         </script>
         <script type="text/template" id="dashboard-template">
         <div class="container">
-        
             <div class="row">
                 <div class="col-xs-6 dashboard">
                     <div class="dash-content">
@@ -71,6 +70,7 @@
                                 <span class="glyphicon glyphicon-cloud-download"></span>
                             </a>
                         </h4>
+                        <div>Buscar: <input id="buscar-alumno-activo" placeholder="Por matrícula o nombre" /></div>
                         <table id="table-alumnos" class="table table-striped table-hover">
                             <thead>
                                 <tr>
