--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="nav"></div>
-        <div id="container" style="background-color: #fff">        
             <div id="app"></div>
-        </div>
 
 
         <script type="text/template" id="login-template">
@@ -120,6 +118,11 @@
             <td><%- idgrupo %></td>
         </script>
         <script type="text/template" id="alumnos-template">
+            <div class="container">
+               
+            <div class="col-xs-12 dashboard">
+            <div class="dash-content">
+            <h4>Alumnos </h4>
             <table id="table-alumnos" class="table table-striped table-hover">
             <thead>
             <tr>
@@ -131,9 +134,17 @@
             <tbody>
             </tbody>
             </table>
+            <div>
+            <div>
+            </div>
         </script>
 
         <script type="text/template" id="grupos-template">
+              <div class="container">
+               
+            <div class="col-xs-12 dashboard">
+            <div class="dash-content">
+            <h4>Grupos </h4>
             <table id="table-grupos" class="table table-striped table-hover">
             <thead>
             <tr>
@@ -145,6 +156,9 @@
             <tbody>
             </tbody>
             </table>
+            </div>
+            </div>
+            </div>
         </script>
 
         <script src="js/vendor/jquery.min.js"></script>
