--- a/index.html
+++ b/index.html
@@ -133,6 +133,21 @@
                 </td>
             <%}%>
         </script>
+        <script type="text/template" id="alumno-template">
+            <td><%- matricula %></td>
+            <td><%- nombre %></td>
+            <td><%- carrera %></td>
+            <td><%- (ultima ? ultima : '') %></td>
+            <td>
+                <a href="#/solicitar/alumno/<%- matricula %>" class="glyphicon glyphicon-link glyphicon-lg"></a>
+            <% if(TUTORIAS.token != 'docente') { %>
+                <% if(TUTORIAS.token != 'tutor') { %>
+                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
+                <%}%>
+                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
+            <%}%>
+                </td>
+        </script>
         <script type="text/template" id="grupo-activo-template">
             <td><%- idgrupo %></td>
             <td><%- grupo %></td>
@@ -144,17 +159,54 @@
             </td>
             <%}%>
         </script>
+
+        <script type="text/template" id="grupo-template">
+            <td><%- idgrupo %></td>
+            <td><%- grupo %></td>
+            <td><%- ultima %></td>
+            <td>
+                <a href="#/solicitar/grupo/<%- idgrupo %>" class="glyphicon glyphicon-link glyphicon-lg"></a>
+            <% if(TUTORIAS.token != 'docente') { %>
+                <% if(TUTORIAS.token != 'tutor') { %>
+                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
+                <%}%>
+                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
+            <%}%>
+            </td>
+        </script>
         <script type="text/template" id="alumnos-template">
             <div class="container">
                
             <div class="col-xs-12 dashboard">
             <div class="dash-content">
-            <h4>Alumnos </h4>
+            <h2>Buscar Alumnos </h2>
+
+            <div class="col-xs-8">
+                <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-search"></i>
+                </span>
+               <input id="buscar-alumno" placeholder="Buscar por nombre o matrícula" class="form-control" />
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-filter"></i>
+                </span>
+                <select id="buscar-carrera" class="form-control" >
+                    <option>Todas las carreras</option>
+                </select>
+                </div>
+            </div>
+
             <table id="table-alumnos" class="table table-striped table-hover">
             <thead>
             <tr>
             <th>Matrícula</th>
             <th>Alumno</th>
+            <th>Carrera</th>
+            <th>Última</th>
             <th>Opciones</th>
             </tr>
             </thead>
@@ -177,6 +229,7 @@
             <tr>
             <th>#</th>
             <th>Grupo</th>
+            <th>Última</th>
             <th>Opciones</th>
             </tr>
             </thead>
