--- a/index.html
+++ b/index.html
@@ -60,64 +60,64 @@
             </div>
         </script>
         <script type="text/template" id="dashboard-template">
-        <div class="container">
+            <div class="container">
             <div class="row">
-                <div class="col-xs-6 dashboard">
-                    <div class="dash-content">
-                        <h4>
-                            Alumnos en Proceso 
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cloud-download"></span>
-                            </a>
-                        </h4>
-                        <div class="input-group">
-                        <input id="buscar-alumno-activo" placeholder="Buscar por matrícula o nombre" class="form-control" />
-                        <span class="input-group-addon">
-        <i class="glyphicon glyphicon-search"></i>
-    </span></div>
-                        <table id="table-alumnos" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Metrícula</th>
-                                    <th>Nombre</th>
-                                    <th>Última Tutoria</th>
-                                    <% if(TUTORIAS.token != "docente") { %>
-                                    <th>Opc</th>
-                                    <%}%>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="col-xs-6 dashboard">
-                    <div class="dash-content">
-                        <h4>Grupos en Proceso
-                        <a href="#">
-                                <span class="glyphicon glyphicon-cloud-download"></span>
-                            </a></h4>
-                            <div class="input-group">
-                        <input id="buscar-alumno-activo" placeholder="Buscar por nombre" class="form-control" />
-                        <span class="input-group-addon">
-        <i class="glyphicon glyphicon-search"></i>
-    </span></div>
-                            <table id="table-grupos" class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Grupo</th>
-                                    <th>Última Tutoria</th>
-                                    <% if(TUTORIAS.token != "docente") { %>
-                                    <th>Opc</th>
-                                    <%}%>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+            <div class="col-xs-6 dashboard">
+            <div class="dash-content">
+            <h4>
+            Alumnos en Proceso 
+            <a href="#" class="tooltips" data-toogle="tooltip" data-placement="right"  title="Descargar reporte de alumnos">
+            <span class="glyphicon glyphicon-cloud-download"></span>
+            </a>
+            </h4>
+            <div class="input-group">
+            <input id="buscar-alumno-activo" placeholder="Buscar por matrícula o nombre" class="form-control" />
+            <span class="input-group-addon">
+            <i class="glyphicon glyphicon-search"></i>
+            </span></div>
+            <table id="table-alumnos" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>Metrícula</th>
+            <th>Nombre</th>
+            <th>Última Tutoria</th>
+            <% if(TUTORIAS.token != "docente") { %>
+            <th>Opc</th>
+            <%}%>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+            </div>
+            </div>
+            <div class="col-xs-6 dashboard">
+            <div class="dash-content">
+            <h4>Grupos en Proceso
+            <a href="#" class="tooltips" data-toogle="tooltip" data-placement="right"  title="Descargar reporte de grupos">
+            <span class="glyphicon glyphicon-cloud-download"></span>
+            </a></h4>
+            <div class="input-group">
+            <input id="buscar-alumno-activo" placeholder="Buscar por nombre" class="form-control" />
+            <span class="input-group-addon">
+            <i class="glyphicon glyphicon-search"></i>
+            </span></div>
+            <table id="table-grupos" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>#</th>
+            <th>Grupo</th>
+            <th>Última Tutoria</th>
+            <% if(TUTORIAS.token != "docente") { %>
+            <th>Opc</th>
+            <%}%>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+            </div>
+            </div>
             </div>
             </div>
         </script>
@@ -127,9 +127,9 @@
             <td><%- ultima %></td>
             <% if(TUTORIAS.token != 'docente') { %>
             <td>
-                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
-                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
-                </td>
+            <a data-toogle="tooltip" data-placement="right"  title="Opcion 1" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips"></a> 
+            <a data-toogle="tooltip" data-placement="right"  title="Opcion 2"  href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
+            </td>
             <%}%>
         </script>
         <script type="text/template" id="alumno-template">
@@ -138,14 +138,14 @@
             <td><%- carrera %></td>
             <td><%- (ultima ? ultima : '') %></td>
             <td>
-                <a href="#/solicitar/alumno/<%- matricula %>" class="glyphicon glyphicon-link glyphicon-lg"></a>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 1" href="#/solicitar/alumno/<%- matricula %>" class="glyphicon glyphicon-link glyphicon-lg tooltips"></a>
             <% if(TUTORIAS.token != 'docente') { %>
-                <% if(TUTORIAS.token != 'tutor') { %>
-                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
-                <%}%>
-                <a href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
+            <% if(TUTORIAS.token != 'tutor') { %>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 2" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips" ></a> 
             <%}%>
-                </td>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 3" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
+            <%}%>
+            </td>
         </script>
         <script type="text/template" id="grupo-activo-template">
             <td><%- idgrupo %></td>
@@ -153,8 +153,8 @@
             <td><%- ultima %></td>
             <% if(TUTORIAS.token != 'docente') { %>
             <td>
-                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
-                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 1" href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips"></a> 
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 2" href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
             </td>
             <%}%>
         </script>
@@ -164,12 +164,12 @@
             <td><%- grupo %></td>
             <td><%- ultima %></td>
             <td>
-                <a href="#/solicitar/grupo/<%- idgrupo %>" class="glyphicon glyphicon-link glyphicon-lg"></a>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opcion 1" href="#/solicitar/grupo/<%- idgrupo %>" class="glyphicon glyphicon-link glyphicon-lg tooltips"></a>
             <% if(TUTORIAS.token != 'docente') { %>
-                <% if(TUTORIAS.token != 'tutor') { %>
-                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-comment glyphicon-lg"></a> 
-                <%}%>
-                <a href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg"></a>
+            <% if(TUTORIAS.token != 'tutor') { %>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 2" href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips"></a> 
+            <%}%>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Opcion 3" href="#/tutoria/grupo/<%- idgrupo %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
             <%}%>
             </td>
         </script>
@@ -181,22 +181,22 @@
             <h2>Buscar Alumnos </h2>
 
             <div class="col-xs-8">
-                <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="glyphicon glyphicon-search"></i>
-                </span>
-               <input id="buscar-alumno" placeholder="Buscar por nombre o matrícula" class="form-control" />
-                </div>
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i  class="glyphicon glyphicon-search"></i>
+            </span>
+            <input id="buscar-alumno" placeholder="Buscar por nombre o matrícula" class="form-control" />
+            </div>
             </div>
             <div class="col-xs-4">
-                <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="glyphicon glyphicon-filter"></i>
-                </span>
-                <select id="buscar-carrera" class="form-control" >
-                    <option>Todas las carreras</option>
-                </select>
-                </div>
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i class="glyphicon glyphicon-filter"></i>
+            </span>
+            <select id="buscar-carrera" class="form-control" >
+            <option>Todas las carreras</option>
+            </select>
+            </div>
             </div>
 
             <table id="table-alumnos" class="table table-striped table-hover">
