--- a/index.html
+++ b/index.html
@@ -138,9 +138,24 @@
             <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
             <% _.each(menus,function(item){ %>
+            <% if (item.menu instanceof Object){ %>
+            <li class="dropdown <%- item.menu.menu %>">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#/<%- item.menu.menu  %>"><%- item.menu.menu %> <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                <% _.each(item.menu.submenus,function(subitem){ %>
+                     <li class="<%- subitem.submenu %>">
+                        <a href="#/<%- item.menu.menu %>/<%- subitem.submenu %>">
+                            <%- subitem.submenu.replace("_", " ") %>
+                        </a>
+                     </li>
+                <% }); %>
+                </ul>
+            </li>
+            <% } else {%>
             <li class="<%- item.menu %>">
             <a href="#/<%- item.menu %>"><%- item.menu %></a>
             </li>
+            <% } %>
             <% }); %>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -352,19 +367,74 @@
             </div>
             </div>
         </script>
-        
-         <script type="text/template" id="permisos-template">
+         <script type="text/template" id="posibles-usuarios-template">
 
             <div class="container">
 
             <div class="col-xs-12 dashboard">
             <div class="dash-content">
-            <h4>Permisos </h4>
-            <form class="form-horizontal" role="form">
-            <div class="form-group">
-            <label for="inputSearch" class="col-xs-1 control-label">Buscar</label>
-            <div class="col-xs-10">
-            <input type="text" class="form-control" id="inputSearch" placeholder="Grupo">
+            <h2>Buscar Posibles Usuarios </h2>
+
+            <div class="col-xs-12">
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i  class="glyphicon glyphicon-search"></i>
+            </span>
+            <input id="buscar-posible-usuario" placeholder="Buscar por número o nombre" class="form-control" />
+            </div>
+            </div>
+            
+            </form>
+            <!--Tabla usuarios-->
+            <table id="table-posibles-usuarios" class="table table-striped table-hover">
+            <thead>
+            <tr>
+            <th>#</th>
+            <th>Nombre</th>
+            <th>Opciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>           
+            </div>
+            </div>
+            </div>
+        </script>        
+         <script type="text/template" id="usuarios-template">
+
+            <div class="container">
+
+            <div class="col-xs-12 dashboard">
+            <div class="dash-content">
+            <h2>Buscar  Usuarios </h2>
+
+            <div class="col-xs-6">
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i  class="glyphicon glyphicon-search"></i>
+            </span>
+            <input id="buscar-usuario" placeholder="Buscar por número o nombre" class="form-control" />
+            </div>
+            </div>
+            <div class="col-xs-3">
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i class="glyphicon glyphicon-filter"></i>
+            </span>
+            <select id="buscar-nivel" class="form-control" >
+            <option>Todos los niveles</option>
+            </select>
+            </div>
+            </div>
+            <div class="col-xs-3">
+            <div class="input-group">
+            <span class="input-group-addon">
+            <i class="glyphicon glyphicon-filter"></i>
+            </span>
+            <select id="buscar-estatus" class="form-control" >
+            <option>Todos los estatus</option>
+            </select>
             </div>
             </div>
             </form>
@@ -381,19 +451,7 @@
             </thead>
             <tbody>
             </tbody>
-            </table>
-            <!--Tabla posibles usuarios-->
-            <table id="table-posibles-usuarios" class="table table-striped table-hover">
-            <thead>
-            <tr>
-            <th>#</th>
-            <th>Nombre</th>
-            <th>Opciones</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-            </table>            
+            </table>           
             </div>
             </div>
             </div>
