#20 boton de canalizar

--- a/index.html
+++ b/index.html
@@ -47,12 +47,37 @@
                         <img src="img/profile.jpg" class="img-responsive img-circle" />
                     <h4><%- alumno.nombre %></h4>
                 <%- alumno.matricula %> / <%- alumno.carrera %><br />
+                <% if(TUTORIAS.token == 'administrador') { %>
+                    <a href="#/canalizar/<%- alumno.matricula %>" class="btn btn-danger btn-block">
+                    <span class="glyphicon glyphicon-send"></span> &nbsp;&nbsp;
+                        Canalizar
+                    </a>
+                    <% } %>
                     </div>
                     <div class="col-xs-10">
                         <h2>Historial del Alumno</h2>
+                        <table class="table table-striped table-hover" id="tbl-historial">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Fecha de aplicación</th>
+                                    <th>Tutor</th>
+                                    <th>Opciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
+        </script>
+
+        <script type="text/template" id="historial-alumno-tutoria-template">
+            <td><%= id %></td>
+            <td><%= fecha %></td>
+            <td><%= tutor %></td>
+            <td><a href="#/tutoria/print/<%= id %>"><span class="glyphicon glyphicon-print text-primary"></span></a></td>
         </script>
 
         <script type="text/template" id="modal-template">
@@ -206,6 +231,7 @@
 
             <div class="helper-while-saving hide"></div>
         </script>
+
        <script type="text/template" id="editar-usuario-footer-template">
             <button class="btn btn-danger"  data-dismiss="modal" >Cancelar</button>
             <button class="btn btn-success btnok" >Guardar usuario</button>
@@ -253,6 +279,7 @@
             </div>
             </div>
         </script>
+
         <script type="text/template" id="dashboard-template">
             <div class="container">
             <div class="row">
@@ -315,6 +342,7 @@
             </div>
             </div>
         </script>
+        
         <script type="text/template" id="alumno-activo-template">
             <td><%- matricula %></td>
             <td><%- nombre %></td>
@@ -337,7 +365,7 @@
             <% if(TUTORIAS.token != 'tutor') { %>
             <a data-toogle="tooltip" data-placement="bottom"  title="Opción 2" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips" ></a> 
             <%}%>
-            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 3" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
+            <a data-toogle="tooltip" data-placement="right"  title="Historial"  href="#/historial/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
             <%}%>
             </td>
         </script>
