--- a/index.html
+++ b/index.html
@@ -589,12 +589,12 @@
             <td><%- nombre %></td>
             <% if(TUTORIAS.token == 'administrador') { %>
             <td>
-            <a data-toogle="tooltip" data-placement="bottom"  title="Agregar" href="#/tutoria/agregar/<%- idPersona %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips agregar-usuario"></a> 
+            <a data-toogle="tooltip" data-placement="bottom"  title="Agregar usuario" href="#/tutoria/agregar/<%- idPersona %>" class="glyphicon glyphicon-plus glyphicon-lg tooltips agregar-usuario"></a> 
             </td>
             <%}%>
         </script>
-
         <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/bootstrap-tooltip.js"></script>
         <script src="js/vendor/bootstrap.js"></script>
         <script src="js/vendor/underscore.js"></script>
         <script src="js/vendor/backbone.js"></script>
